# dev_lit

./: .gitignore  CMakeLists.txt  README.md  index.rst  lit.catalogue.rst
CMake/CScott.2018.Professional_CMake/: Abstract.md  Abstract.rst  code.block.list.txt
CMake/test/: cmake.code.lexer.test.rst
Schlee_Qt510/: .gitignore
Schlee_Qt510/chapter01/ll_01_01/: hello.cpp  ll_01_01.pro
catalogue/: algorithms.rst  assembly.rst  book.template.txt  c++.rst  c.rst  cmake.rst  computer.science.rst  embedded.rst  fortran.rst  java.rst  javascript.rst  linux.programming.rst  machine.learning.rst  mathematics.rst  maven.rst  programming.languages.rst  python.rst  ruby.rst  shell.rst  unix.rst
docs/: conf.py.in
docs/ext/: Biblio.py  CMakeColors.py  CMakeHelpOnline.py  CMakePygmentsLexer.py
docs/include/: cmake.roles.txt  environment.variable.txt
docs/static/: book.catalogue.css  cmake.css  dev_lit.css
